--- a/courses.html
+++ b/courses.html
@@ -57,7 +57,7 @@
                                                 <li><a href="elements.html">elements</a></li>
                                             </ul>
                                         </li> -->
-                                        <li><a href="about.html">About</a></li>
+                                        <!-- <li><a href="about.html">About</a></li> -->
                                         <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">blog</a></li>
