--- a/course_details.html
+++ b/course_details.html
@@ -49,15 +49,15 @@
                             <div class="main-menu  d-none d-lg-block">
                                 <nav>
                                     <ul id="navigation">
-                                        <li><a class="active" href="index.html">home</a></li>
-                                        <li><a href="Courses.html">Courses</a></li>
+                                        <li><a href="index.html">home</a></li>
+                                        <li><a class="active" href="Courses.html">Courses</a></li>
                                         <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="course_details.html">course details</a></li>
                                                 <li><a href="elements.html">elements</a></li>
                                             </ul>
                                         </li> -->
-                                        <li><a href="about.html">About</a></li>
+                                        <!-- <li><a href="about.html">About</a></li> -->
                                         <li><a href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">blog</a></li>
@@ -493,13 +493,11 @@
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="#">
-                                    <img src="img/logo.png" alt="">
+                                    <h2 class="text-white">Education Platform</h2>
                                 </a>
                             </div>
                             <p>
-                                Firmament morning sixth subdue darkness creeping gathered divide our let god moving.
-                                Moving in fourth air night bring upon it beast let you dominion likeness open place day
-                                great.
+                                Mockup Data
                             </p>
                             <div class="socail_links">
                                 <ul>
@@ -534,11 +532,9 @@
                                 Courses
                             </h3>
                             <ul>
-                                <li><a href="#">Wordpress</a></li>
-                                <li><a href="#"> Photoshop</a></li>
-                                <li><a href="#">Illustrator</a></li>
-                                <li><a href="#">Adobe XD</a></li>
-                                <li><a href="#">UI/UX</a></li>
+                                <li><a href="#">Mockup</a></li>
+                                <li><a href="#"> Mockup</a></li>
+                                <li><a href="#">Mockup</a></li>
                             </ul>
 
                         </div>
@@ -549,9 +545,6 @@
                                 Resourches
                             </h3>
                             <ul>
-                                <li><a href="#">Free Adobe XD</a></li>
-                                <li><a href="#">Tutorials</a></li>
-                                <li><a href="#">About</a></li>
                                 <li><a href="#"> About</a></li>
                                 <li><a href="#"> Contact</a></li>
                             </ul>
@@ -563,9 +556,7 @@
                                 Address
                             </h3>
                             <p>
-                                200, D-block, Green lane USA <br>
-                                +10 367 467 8934 <br>
-                                edumark@contact.com
+                                FEU
                             </p>
                         </div>
                     </div>
