--- a/blog.html
+++ b/blog.html
@@ -41,7 +41,7 @@
                         <div class="col-xl-2 col-lg-2">
                             <div class="logo-img">
                                 <a href="index.html">
-                                    <img src="img/logo.png" alt="">
+                                    <h2 class="white-text">Education Platform</h2>
                                 </a>
                             </div>
                         </div>
@@ -50,14 +50,14 @@
                                 <nav>
                                     <ul id="navigation">
                                         <li><a href="index.html">home</a></li>
-                                        <li><a href="Courses.html">Courses</a></li>
-                                        <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                        <li><a href="courses.html">Courses</a></li>
+                                        <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="course_details.html">course details</a></li>
                                                 <li><a href="elements.html">elements</a></li>
                                             </ul>
-                                        </li>
-                                        <li><a href="about.html">About</a></li>
+                                        </li> -->
+                                        <!-- <li><a href="about.html">About</a></li> -->
                                         <li><a class="active" href="#">blog <i class="ti-angle-down"></i></a>
                                             <ul class="submenu">
                                                 <li><a href="blog.html">blog</a></li>
@@ -75,12 +75,12 @@
                                     <i class="flaticon-user"></i>
                                     <span>log in</span>
                                 </a>
-                                <div class="live_chat_btn">
+                                <!-- <div class="live_chat_btn">
                                     <a class="boxed_btn_orange" href="#">
                                         <i class="fa fa-phone"></i>
                                         <span>+10 378 467 3672</span>
                                     </a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                         <div class="col-12">
@@ -434,13 +434,11 @@
                         <div class="footer_widget">
                             <div class="footer_logo">
                                 <a href="#">
-                                    <img src="img/logo.png" alt="">
+                                    <h2 class="text-white">Education Platform</h2>
                                 </a>
                             </div>
                             <p>
-                                Firmament morning sixth subdue darkness creeping gathered divide our let god moving.
-                                Moving in fourth air night bring upon it beast let you dominion likeness open place day
-                                great.
+                                Mockup Data
                             </p>
                             <div class="socail_links">
                                 <ul>
@@ -475,11 +473,9 @@
                                 Courses
                             </h3>
                             <ul>
-                                <li><a href="#">Wordpress</a></li>
-                                <li><a href="#"> Photoshop</a></li>
-                                <li><a href="#">Illustrator</a></li>
-                                <li><a href="#">Adobe XD</a></li>
-                                <li><a href="#">UI/UX</a></li>
+                                <li><a href="#">Mockup</a></li>
+                                <li><a href="#"> Mockup</a></li>
+                                <li><a href="#">Mockup</a></li>
                             </ul>
 
                         </div>
@@ -490,9 +486,6 @@
                                 Resourches
                             </h3>
                             <ul>
-                                <li><a href="#">Free Adobe XD</a></li>
-                                <li><a href="#">Tutorials</a></li>
-                                <li><a href="#">About</a></li>
                                 <li><a href="#"> About</a></li>
                                 <li><a href="#"> Contact</a></li>
                             </ul>
@@ -504,9 +497,7 @@
                                 Address
                             </h3>
                             <p>
-                                200, D-block, Green lane USA <br>
-                                +10 367 467 8934 <br>
-                                edumark@contact.com
+                                FEU
                             </p>
                         </div>
                     </div>
