--- a/single-blog.html
+++ b/single-blog.html
@@ -50,7 +50,13 @@
                              <nav>
                                  <ul id="navigation">
                                      <li><a href="index.html">home</a></li>
-                                     <li><a href="courses.html">Courses</a></li>
+                                     <li><a href="courses.html">Courses <i class="ti-angle-down"></i></a>
+                                       <ul class="submenu">
+                                           <li><a href="courses.html">Academic</a></li>
+                                           <li><a href="courses.html">Activities</a></li>
+                                           <li><a href="courses.html">Local Wisdom</a></li>
+                                       </ul>
+                                    </li>
                                      <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                          <ul class="submenu">
                                              <li><a href="course_details.html">course details</a></li>
